--- a/README
+++ b/README
@@ -3,7 +3,9 @@ This fork is intended to remove certain parts of the application.  It is intende
 Modificiations from parent:
 - Remove everything non-Android
 - Remove heyzap
+- Remove purchase options
 
+Original:
 -------------------------------------------------------------------------------------------
 This is the source code for Droid Towers, a game for Android.  It is a 
 tower building simulation inspired by SimTower.  I have added my own game play
